--- a/style.css
+++ b/style.css
@@ -79,6 +79,10 @@ html {
   width: 100%;
 }
 
+.logo-wrapper img {
+  border-radius: 20%;
+}
+
 .reasponsive {
   display: flex;
   align-items: center;
@@ -88,7 +92,11 @@ html {
 
 .socials li {
   margin-left: 30px;
-z-index: 2000;
+}
+
+.socials li img {
+  display: block;
+  border-radius: 40%;
 }
 
 .slider-list {
